# formula_screening

./: .envrc  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  RULES.md  codereview-report.md  context.md  flake.nix  package-lock.json  plan.md  pyproject.toml
.claude/: .arch_check_state.json  settings.json  settings.local.json
.claude/hooks/: post_enforce_declarative_strategy.py  stop_no_literal_defaults.py  stop_require_architecture_md_update.py
browser_service/: server.js
config/: cli_defaults.toml  magic_numbers.toml  path.toml  proxy_sources.txt  scan_fallbacks.toml  validation_sites.txt
data/: not_a_proxy.txt  screening.db
data/irbank/0016/: fy-balance-sheet.json  fy-cash-flow-statement.json  fy-profit-and-loss.json  fy-stock-dividend.json
data/irbank/0017/: fy-balance-sheet.json  fy-cash-flow-statement.json  fy-profit-and-loss.json  fy-stock-dividend.json
data/irbank/0018/: fy-balance-sheet.json  fy-cash-flow-statement.json  fy-profit-and-loss.json  fy-stock-dividend.json
data/irbank/0019/: fy-balance-sheet.json  fy-cash-flow-statement.json  (+2 more)
docs/: index.html
docs/assets/: app.js  column-config.json  screening.json  stock-price-meta.json
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
scripts/: diagnose_fcf_history.py  download_irbank.py  export_csv.py  fetch_prices.py  scrape_irbank_bs.py
src/formula_screening/: __main__.py  bootstrap.py  browser.py  cache_invalidation.py  cli.py  config.py  fcf_history_diagnostics.py  fmt.py  log.py  magic_numbers.toml  metrics.py  net_cash.py  preferred_shares.py  price_updates.py  proxy.py  screen_output.py  screener.py  stealth.py  stock_db_compat.py  validation.py  web.py  worker.py
src_ts/: app.ts
strategies/: buffet.toml  net_cash.py  net_cash_fcf.py  net_cash_fcf.toml  net_cash_result_on_sikihou.csv
strategies/examples/: growth.py  stocks_sample.txt  value.py
tests/: conftest.py  scan_fallbacks.py  test_bootstrap.py  test_browser.py  test_cache_invalidation.py  test_cli.py  test_edinetdb.py  test_fcf_history_diagnostics.py  test_fmt.py  test_indicators.py  test_irbank.py  test_irbank_bs.py  test_irbank_forecast.py  test_kabutan_shares.py  test_metrics.py  test_net_cash.py  test_net_cash_fcf_strategy.py  test_peg_indicator.py  test_price_updates.py  test_proxy_runtime.py  test_repository.py  test_rust_migration_contract.py  test_scan_fallbacks.py  test_screener.py  test_stealth.py  test_stock_db_api_boundary.py  test_stocklist.py  test_stooq_price.py  test_validation.py  test_web.py  test_worker.py
tests/fixtures/: kabutan_7203.html  kabutan_8046.html
(+4523 files in other folders)
