[package]
name = "formula-screening-core"
version = "0.1.0"
edition = "2024"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/config/magic_numbers.toml",
    "/rust/src/**",
]

[lib]
name = "formula_screening_core"
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[[bin]]
name = "formula-screening"
path = "rust/src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stock_db_core = { package = "stock-db-xbrl", path = "../stock_db/rust" }
stock_web_ui_core = { package = "stock-web-ui-core", path = "../stock_web_ui/rust" }
toml = "0.8"
