[project]
name = "formula-screening"
version = "0.1.0"
description = "Stock screening tool with user-defined Python formulas for Japanese equities"
requires-python = ">=3.13"
dependencies = [
    "yfinance>=0.2,<1",
    "requests>=2.28,<3",
    "truststore>=0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formula_screening"]
