[project]
name = "formula-screening"
version = "0.1.0"
description = "Stock screening tool with user-defined Python formulas for Japanese equities"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.28,<3",
    "truststore>=0.9,<1",
    "brotli>=1.1,<2",
    "pysocks>=1.7,<2",
    "stock-db>=0.1.0,<1",
    "stock-web-ui>=0.1.0,<1",
]

[tool.uv.sources]
stock-db = { path = "../stock_db", editable = true }
stock-web-ui = { path = "../stock_web_ui", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formula_screening"]
